--- a/file.css
+++ b/file.css
@@ -1,3 +1,8 @@
 body{
-    background-color: chocolate;
+    background-color: rgb(223, 190, 167);
+}
+
+.form{
+   position: block; 
+   border: 2px solid chocolate;
 }
